edit destroy functions

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -128,6 +128,9 @@ en:
       Enclosure was successfully created: "Enclosure was successfully created"
       Enclosure was successfully updated: "Enclosure was successfully updated"
       Enclosure was successfully deleted: "Enclosure was successfully deleted"
+      Animal status was successfully created: "Animal status was successfully created"
+      Animal status was successfully updated: "Animal status was successfully updated"
+      Animal status was successfully deleted: "Animal status was successfully deleted"
       Medical procedures created: "Medical procedures created"
       Added to enclosure: "Аdded to enclosure"
       Procedure type was successfully created: "Procedure type was successfully created"
