--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -64,6 +64,7 @@ en:
     Section has animals and can't be deleted: "Section has animals and can't be deleted"
     Enclosure has animals and can't be deleted: "Enclosure has animals and can't be deleted"
     There are animals with this status and it can't be deleted: "There are animals with this status and it can't be deleted"
+    There are animals with this type and it can't be deleted: "There are animals with this type and it can't be deleted"
   label:
     sort: "Sort"
     order: "Order"
