--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -32,7 +32,7 @@ ru:
     hello: "привет"
     Animal Types: "Виды граждан"
     Animal Status: "Статус граждан"
-    Animals: "Животные"
+    Animals: "Электорат"
     Procedure Types: "Виды процедур"
     Procedure Type: "вид процедур"
     Procedures: "Процедуры"
@@ -220,7 +220,7 @@ ru:
       types: "Виды"
       statuses: "Статус"
       procedures: "Процедуры"
-      animals: "Животные"
+      animals: "Электорат"
       aviaries: "Вольеры"
       language: "Язык"
       cart: "Список"
