--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -85,6 +85,8 @@ ru:
     There are animals with this type and it can't be deleted: "Есть животные этого вида, поэтому вид нельзя удалить"
     To remove a sibling, please check the corresponding checkbox: "Чтобы удалить брата или сестру, поставьте галочку около имени"
     To add a sibling please select one from a drop-down list: "Чтобы добавить брата или сестру, выберите имя из списка"
+    Updated on: "Обновлено"
+    on: "в"
   helpers:
     page_entries_info:
       one_page:
