rename fields in animals

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -106,7 +106,7 @@ en:
     errors:
       models:
         animal:
-          any_present_message: "One of the following fileds should exist: nickname, surname, color, description, or arival_date"
+          any_present_message: "One of the following fileds should exist: nickname, surname, color, or arival_date"
         aviary:
           is_already_in_this_aviary: "is already in this enclosure"
   forms:
