--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -217,7 +217,7 @@ ru:
       ru: "Русский"
       en: "English"
     header:
-      citizens: "Граждане"
+      аdditions: "Дополнения"
       medicine: "Медицина"
       types: "Виды"
       statuses: "Статус"
