--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -141,6 +141,7 @@ ru:
         parent_id: "Родитель"
         children: "Дети"
         siblings: "Братья и сестры"
+        size: "Размер"
       animal_type:
         name: "Название"
       animal_status:
@@ -230,6 +231,10 @@ ru:
     "Неопределен": Неопределен
     "М": М
     "Ж": Ж
+  size_list:
+    "Маленький": Маленький
+    "Средний": Средний
+    "Большой": Большой
   date:
     month_names: [~, Января, Февраля, Марта, Апреля, Мая, Июня,
                     Июля, Августа, Сентября, Октября, Ноября, Декабря]
