--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -143,6 +143,9 @@ en:
       Procedure type was successfully created: "Procedure type was successfully created"
       Procedure type was successfully updated: "Procedure type was successfully updated"
       Procedure type was successfully deleted: "Procedure type was successfully deleted"
+      Admin user was successfully deleted: "Admin user was successfully deleted"
+      Admin user was successfully updated: "Admin user was successfully updated"
+      Admin user was successfully added: "Admin user was successfully added"
       Registered successfully: "Registered successfully"
       Registered successfully: "Registered successfully"
       Try another email address or password: "Try another email address or password"
