--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -76,6 +76,7 @@ en:
     Search Text Fields: "Search Text Fields"
     Death Date: "Death Date"
     Birth Date: "Birth Date"
+    Vaccination Date: "Vaccination Date"
   menu:
     languages:
       lang: "Language"
