--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -136,7 +136,7 @@ ru:
         color: "Окрас"
         aviary_id: "Вольер"
         section_id: "Секция"
-        distinctive_feature: "  Osoбенности"
+        distinctive_feature: "Oсoбенности"
         medical_history: "История болезни"
         graduation: "Выпуск"
         animal_type_id: "Вид"
