animal filter to work on autosubmit

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -51,7 +51,7 @@ ru:
     cart: "Список"
     Your cart is empty: "Список пустой"
     Contains: "Содержит"
-    From: "От"
+    From: "После"
     To: "До"
     Date: "Дата"
     Editing: "Редактировать"
