--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -119,6 +119,12 @@ ru:
     status: "Статус"
     animal_type: "вид"
     Search Text Fields: "Поиск"
+    date_planned_after: "Плановая дата - после"
+    date_planned_before: "Плановая дата - до"
+    date_completed_after: "Дата проведения - после"
+    date_completed_before: "Дата проведения - до"
+    arival_date_after: "Дата появления - после"
+    arival_date_before: "Дата появления - до"
   activerecord:
     attributes:
       animal:
