--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -174,3 +174,10 @@ en:
     few:  "%{count} errors"
     many:  "%{count} errors"
     other: "%{count} errors"
+  age:
+    years old: "years old"
+    months old: "months old"
+    year old: "year old"
+    month old: "month old"
+    year: "year"
+    month: "month"
