--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -83,6 +83,8 @@ en:
     date_completed_before: "Date Completed - Before"
     arival_date_after: "Arrival Date - After"
     arival_date_before: "Arrival Date - Before"
+    status: "Status"
+    animal_type: "Type"
   menu:
     languages:
       lang: "Language"
