--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -68,7 +68,7 @@ ru:
     To upload multiple images, click Browse and select all images at once: "Чтобы загрузить несколько изображений, нажмите Browse ... и выберите все изображения одновременно"
     Uploaded Pictures: "Загруженные фотографии"
     Uploaded on: "Загружена"
-    Nickname contains: "Кличка содержит"
+    Nickname contains: "Имя содержит"
     citizens: "Граждане"
     Citizen: "Граждaнин"
     Animal Type: "вид граждан"
@@ -77,7 +77,7 @@ ru:
     table: "Таблица"
     pictures: "Картинки"
     The default status cannot be removed: "Этот статус не может быть удален"
-    Start typing to search: "Начните печатать кличку для поиска"
+    Start typing to search: "Начните печатать имя для поиска"
     Select Day: "Выберите день"
     Select Month: "Выберите месяц"
     Select Year: "Выберите год"
@@ -130,7 +130,7 @@ ru:
     attributes:
       animal:
         id: "Номер"
-        nickname: "Кличка"
+        nickname: "Имя"
         surname: "Фамилия"
         gender: "Пол"
         arival_date: "Дата появления"
@@ -179,7 +179,7 @@ ru:
     errors:
       models:
         animal:
-          any_present_message: "Одно из следующих полей должно быть заполнено: кличка, фамилия, окрас, или дата появления"
+          any_present_message: "Одно из следующих полей должно быть заполнено: имя, фамилия, окрас, или дата появления"
         section:
           is_already_in_this_aviary: "уже есть в этом вольере"
       messages:
