--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -166,6 +166,7 @@ en:
     "Male": Male
     "Female": Female
   size_list:
+    "Puppy": Puppy
     "Small": Small
     "Medium": Medium
     "Large": Large
