--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -254,6 +254,7 @@ ru:
     "М": М
     "Ж": Ж
   size_list:
+    "Puppy": Щенок
     "Маленький": Маленький
     "Средний": Средний
     "Большой": Большой
