empty cart method

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -130,6 +130,7 @@ en:
       save: "Save"
       add: "Add"
       update: "Update"
+      empty_cart: "Empty Cart"
     sort:
       asc: "Ascending"
       desc: "Descending"
