--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -229,6 +229,7 @@ ru:
      add: "Добавить"
      update: "Обновить"
      duplicate: "Дублировать"
+     empty_cart: "Обнулить список"
     sort:
       asc: "По возрастанию"
       desc: "По убыванию"
