--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -40,6 +40,7 @@ ru:
     Pictures: "Фотографии"
     Add To Enclosure: "Добавить в вольер"
     Medical Procedures: "Медицинские назначения"
+    Completed Procedures: "Проведенные процедуры"
     Medical Procedure: "Медицинское назначение"
     New Medical Procedure: "Новая медицинская процедура"
     Aviary: "Вольер"
