prevent removing the default procedure

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,6 +57,7 @@ en:
     Are you sure?: "Are you sure?"
     The default status cannot be removed: "The default status cannot be removed"
     The default type cannot be removed: "The default type cannot be removed"
+    The default procedure cannot be removed: "The default procedure cannot be removed"
     Start typing to search: "Start typing to search"
     Select Day: "Select Day"
     Select Month: "Select Month"
